# rustCrypt

./: .gitignore  Cargo.toml  README.md  SECURITY.md  build_Linux.sh  build_Windows.cmd  deny.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: cli.rs  constants.rs  crypto.rs  hardening.rs  main.rs  ops.rs  utils.rs  worker.rs
src/tests/: cli_tests.rs
tests/: cli_tests.rs
