[package]
name = "rcrypt"
version = "1.0.0"
edition = "2024"
description = "Robust per-file encryption using AES-256-GCM and Argon2id"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
aes-gcm = "0.10"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
glob = "0.3"
rand = "0.8"
rpassword = "7"
walkdir = "2.5"
zeroize = { version = "1.8", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.10"
