[package]
name = "rcrypt"
version = "1.1.0"
edition = "2024"
description = "Robust per-file encryption using AES-256-GCM and Argon2id"
license = "MIT"
repository = "https://github.com/Sh4ngTsung/rustCrypt"
readme = "README.md"
keywords = ["encryption", "aes-gcm", "argon2", "cli", "security"]
categories = ["command-line-utilities", "cryptography"]

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
aes-gcm = "0.10"
clap = { version = "4", features = ["derive"] }
crossbeam-channel = "0.5"
glob = "0.3"
rand = "0.8"
rpassword = "7"
walkdir = "2.5"
zeroize = { version = "1.8", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
debug = false
overflow-checks = true

[profile.dev]
overflow-checks = true

[dev-dependencies]
assert_cmd = "2.0"
assert_fs = "1.1"
predicates = "3.1"
tempfile = "3.10"
